--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700|Roboto:300,400,500,700");
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
+
+html{
+  scroll-behavior: smooth;
+}
 .list {
   list-style: none;
   margin: 0px;
@@ -269,7 +273,7 @@ button:focus {
     height: 100%;
     width: 100%; 
      -webkit-transform: translate3d(-150%,-150%,0);
-  transform: translate3d(0%,-100%,0);
+  transform: translate3d(0%,-105%,0);
   }
     .home_banner_area .banner_inner .home_left_img {
       padding-top: 150px; 
@@ -321,7 +325,7 @@ button:focus {
 ============================================================================================ */
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
-/*
+
 
 .banner-area .overlay-bg {
   border-radius: 10px;
@@ -380,15 +384,16 @@ button:focus {
   .banner-content br {
     display: none;
   }
+
 }
-*/
+
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
 /* Welcome Area css
 ============================================================================================ */
 .welcome_area{
-    /*background: url(../img/banner/background1.gif) no-repeat scroll center center;*/
-    background: white;
+    background: url(../img/banner/background1.gif) no-repeat scroll center center;
+    /*background: white;*/
 }
 .welcome_text {
     /*text-shadow: 2px 2px 10px #C0C0C0;*/
@@ -396,6 +401,7 @@ button:focus {
 
   .welcome_text h4 {
     color: #000000;
+    letter-spacing: 2px;
     font-family: "Generica", sans-serif;
     font-size: 36px;
     margin-bottom: 22px;
@@ -412,10 +418,9 @@ button:focus {
   }
 
 .tools_expert {
-  margin-top: 2px;
+  margin-top: 20px;
   box-shadow: 0px 8px 30px 0px rgba(153, 153, 153, 0.2);
   padding: 50px 35px; 
-  padding-top: 35px;
 }
   .tools_expert h3 {
     font-family: "Generica", sans-serif;
@@ -437,10 +442,10 @@ button:focus {
       color: #000000;
       display: inline;
       margin-bottom: 1px; 
+      padding-bottom: 5px;
       font-style: italic;
       /*text-shadow: 2px 2px 10px #C0C0C0;*/
     }
-
 
   .tools_expert .skill_main .skill_item {
     margin-bottom: 15px; }
@@ -460,49 +465,38 @@ button:focus {
         display: inline;
         float: right;
       }
-    .tools_expert .skill_main .skill_item .progress {
-      height: 20px;
-      border-radius: 10px;
-      background: transparent;
-      border: 1px solid #eeeeee;
-      padding-left: 5px;
-      padding-right: 5px;
-      box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.2); }
-      .tools_expert .skill_main .skill_item .progress .progress-bar {
-        width: 0%;
-        transition: width 0.5s ease;
-        height: 10px;
-        border-radius: 5px;
-        vertical-align: middle;
-        align-self: center;
-        background-image: -moz-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
-        background-image: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
-        background-image: -ms-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%); }
-
 /* End Welcome Area css
 ============================================================================================ */
 
 /* Footer Area css
 ============================================================================================ */
 .footer_area {
-  background: #000410; }
+  background: #000410; 
+  padding-top: 70px;
+  padding-bottom: 30px;}
 
 .f_title {
   margin-bottom: 35px; }
   .f_title h3 {
     color: #fff;
-    font-size: 23px;
+    font-size: 25px;
+    letter-spacing: 2px;
     font-weight: bold;
     font-family: "Generica", sans-serif;
     margin-bottom: 0px;
     letter-spacing: 2px;
     text-transform: uppercase; }
 
-.copy_right_text {
-  text-align: center;
-  margin-top: 60px; }
-  .copy_right_text p a {
+  .ab_widget p {
+  font-size: 16px;
+  line-height: 24px;
+  font-family: "Avenir", sans-serif;
+  color: #fff;
+  margin-bottom: 30px; }
+  .ab_widget p a {
     color: #8490ff; }
+  .ab_widget p + p {
+    margin-bottom: 0px; }
 
 /* End Footer Area css
 ============================================================================================ */
