--- a/css/style.css
+++ b/css/style.css
@@ -71,19 +71,20 @@ button:focus {
 /* Main Title Area css
 ============================================================================================ */
 .main_title {
+  padding-top: 130px;
   text-align: center;
   margin-bottom: 75px; }
   .main_title h2 {
     font-family: "Generica", sans-serif;
-    font-size: 42px;
+    font-size: 62px;
     color: #222222;
     font-weight: bold;
     letter-spacing: 2px;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
     text-transform: uppercase; }
   .main_title p {
-    font-size: 16px;
-    font-family: "Avenir", sans-serif;
+    font-size: 27px;
+    font-family: "Generica", sans-serif;
     line-height: 26px;
     color: #777777;
     margin-bottom: 0px;
@@ -475,35 +476,277 @@ button:focus {
 /* Footer Area css
 ============================================================================================ */
 .footer_area {
-  background: #000410; 
-  padding-top: 70px;
-  padding-bottom: 30px;}
+  background: #ffffff; 
+  padding-top: 50px;
+  padding-bottom: 10px;
+  /*border-top: 1px black;*/
+  text-align: right
+}
 
 .f_title {
-  margin-bottom: 35px; }
+  /*display: inline;*/
+  margin-bottom: 10px; }
   .f_title h3 {
-    color: #fff;
-    font-size: 25px;
+    color: #000000;
+    font-size: 30px;
     letter-spacing: 2px;
     font-weight: bold;
     font-family: "Generica", sans-serif;
     margin-bottom: 0px;
     letter-spacing: 2px;
+    /*text-align: center;*/
     text-transform: uppercase; }
 
   .ab_widget p {
-  font-size: 16px;
+  font-size: 17px;
   line-height: 24px;
   font-family: "Avenir", sans-serif;
-  color: #fff;
+  color: #000000;
   margin-bottom: 30px; }
-  .ab_widget p a {
-    color: #8490ff; }
-  .ab_widget p + p {
-    margin-bottom: 0px; }
 
 /* End Footer Area css
 ============================================================================================ */
 /*---------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
+
+/* Projects Area css
+============================================================================================ */
+.projects_fillter .filter {
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 50px; }
+  .projects_fillter .filter li {
+    display: inline-block;
+    margin-right: 30px; }
+    .projects_fillter .filter li a {
+      font-size: 13px;
+      font-family: "Roboto", sans-serif;
+      color: #777777; }
+    .projects_fillter .filter li:last-child {
+      margin-right: 0px; }
+    .projects_fillter .filter li.active a {
+      color: #8490ff; }
+
+.projects_inner {
+  margin-bottom: -30px; }
+
+.projects_item {
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 30px; }
+  .projects_item:before {
+    content: "";
+    background: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all 300ms ease; }
+  .projects_item .projects_text {
+    position: absolute;
+    left: 0px;
+    bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px; }
+    .projects_item .projects_text h4 {
+      font-size: 21px;
+      font-family: "Avenir", sans-serif;
+      font-weight: bold;
+      letter-spacing: 2px;
+      color: #FFFFFF;
+      margin-bottom: 5px;
+      transition: all 300ms linear 0s;
+      text-transform: uppercase;
+      cursor: pointer; }
+    .projects_item .projects_text p {
+      font-family: "Avenir", sans serif;
+      margin-bottom: 0px;
+      font-size: 14px;
+      color: white; 
+      transition: all 300ms linear 0s;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+  .projects_item:hover:before {
+    opacity: 1.4;
+    }
+    .projects_item:hover .projects_text h4 {
+      font-size: 150%;
+    background: linear-gradient(to right, #8490ff 0%, #62bdfc 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
+    .projects_item:hover .projects_text p {
+      font-size: 15px;
+    background: linear-gradient(to right, #8490ff 0%, #62bdfc 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
+
+/* End Projects Area css
+============================================================================================ */
+/* Feature Area css
+============================================================================================ */
+.feature_area {
+  background: #F8F8F8; }
+  .feature_area.feature_tow {
+    background: #fff; }
+    .feature_area.feature_tow .feature_item {
+      background: #f9f9ff; }
+      .feature_area.feature_tow .feature_item:hover {
+        background: #ffffff; }
+
+.feature_inner {
+  margin-bottom: -30px; }
+
+.feature_item {
+  padding: 50px 35px;
+  border-radius: 10px;
+  transition: all 300ms linear 0s;
+  background: #fff;
+  margin-bottom: 30px; }
+
+  .feature_item i {
+    margin-bottom: 35px;
+    display: block; }
+    .feature_item i:before {
+      margin-left: 0px;
+      font-size: 60px;
+      color: #e1e1e1;
+      line-height: 60px; }
+  .feature_item h4 {
+    color: #222222;
+    font-size: 21px;
+    font-family: "Heebo", sans-serif;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-transform: uppercase; }
+  .feature_item p {
+    margin-bottom: 0px; }
+  .feature_item .main_btn {
+    padding: 0px 30px;
+    line-height: 38px; }
+  .feature_item:hover {
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.08);
+    border-color: #fff; }
+    .feature_item:hover i:before {
+      background: linear-gradient(to right, #8490ff 0%, #62bdfc 70%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent; }
+
+.feature_item_1 {
+  padding: 50px 35px;
+  border-radius: 10px;
+  transition: all 300ms linear 0s;
+  /*background: #fff;*/
+  /*background: url(../img/banner/assault.jpg) ;*/
+  background: cover;
+  margin-bottom: 30px;
+}
+  .feature_item_1 h4 {
+    color:#000000;
+    font-size: 30px;
+    font-family: "Generica", sans-serif;
+    text-align:center;
+    letter-spacing: 0.7px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-transform: uppercase; }
+  .feature_item_1 p {
+    font-size:15px;
+    font-family: "Avenir", sans-serif;
+    margin-bottom: 0px; 
+    color: #000000;}
+  .feature_item_1:hover {
+    box-shadow: 20px 10px 30px 20px rgba(0, 0, 0, 0.1);
+    border-color: #000; 
+    opacity: 1;
+    background: white;
+     -webkit-transform: scale(1.08);
+     transform: scale(1.08);}
+    .feature_item_1{
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease; }
+
+  .feature_item_2 {
+  padding: 50px 35px;
+  border-radius: 10px;
+  transition: all 300ms linear 0s;
+  background: #fff;
+  /*background: url(../img/banner/old-age.jpg);*/
+  background: cover;
+  margin-bottom: 30px; }
+  .feature_item_2 h4 {
+    color:#000000;
+    font-size: 30px;
+    font-family: "Generica", sans-serif;
+    text-align:center;
+    font-weight: bold;
+    letter-spacing: 0.7px;
+    margin-bottom: 20px;
+    text-transform: uppercase; }
+  .feature_item_2 p {
+    font-size:15px;
+    font-family: "Avenir", sans-serif;
+    margin-bottom: 0px; 
+    color: #000000;}
+  .feature_item_2:hover {
+    box-shadow: 20px 10px 30px 20px rgba(0, 0, 0, 0.1);
+    border-color: #000; 
+    opacity: 1;
+    background: #F5F5F5;
+     -webkit-transform: scale(1.08);
+     transform: scale(1.08);}
+    .feature_item_2{
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease; }
+
+
+
+
+/* End Feature Area css
+============================================================================================ */
+/*---------------------------------------------------- */
+/*----------------------------------------------------*/
+
+.banner_area {
+  position: relative;
+  z-index: 1;
+  min-height: 430px; }
+  .banner_area .banner_inner {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    min-height: 430px;
+    background: #f9f9ff;
+    z-index: 1; }
+    .banner_area .banner_inner .banner_content {
+      margin-top: 70px; }
+      .banner_area .banner_inner .banner_content h2 {
+        color: #222222;
+        font-size: 36px;
+        font-family: "Heebo", sans-serif;
+        margin-bottom: 0px;
+        text-transform: uppercase;
+        font-weight: bold; }
+      .banner_area .banner_inner .banner_content .page_link a {
+        font-size: 14px;
+        color: #777777;
+        font-family: "Roboto", sans-serif;
+        margin-right: 32px;
+        position: relative; }
+        .banner_area .banner_inner .banner_content .page_link a:before {
+          content: "\e87a";
+          font-family: 'Linearicons-Free';
+          font-size: 14px;
+          position: absolute;
+          right: -25px;
+          top: 54%;
+          transform: translateY(-50%); }
+        .banner_area .banner_inner .banner_content .page_link a:last-child {
+          margin-right: 0px; }
+          .banner_area .banner_inner .banner_content .page_link a:last-child:before {
+            display: none; }
+
